[MODINVOICE-576]. Add new implementation to VAT included-in adjustment to both Invoices and Invoice Lines (#529)
* [MODINVOICE-576]. Add new implementation to VAT included-in adjustment to both Invoices and Invoice Lines

* [MODINVOICE-576]. Add new Included In calculation at the Invoice Line level

* [MODINVOICE-576]. Update comments

* [MODINVOICE-576]. Apply review recommendations

* [MODINVOICE-576]. Rename a method

* [MODINVOICE-576]. Remove shallow copy & simplify code